updates: fix form visibility in mobile when keyboard is open

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@
 
   /* Containers Width */
   --aside-desktop-container-width: min(30%, 450px);
-  --aside-mobile-container-width: 40%;
+  --aside-mobile-container-width: 230px;
 }
 
 html,
@@ -39,6 +39,7 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
 }
 
 @media only screen and (min-width: 913px) {
@@ -229,15 +230,20 @@ aside.container {
 }
 
 main.container {
+  margin-top: 70px;
   width: 100%;
-  height: 100%;
+  height: calc(100% - var(--aside-mobile-container-width) - 70px);
   display: flex;
   flex-direction: column;
+
+  overflow-y: scroll;
 }
 
 @media only screen and (min-width: 913px) {
   main.container {
+    margin: 0;
     width: calc(100% - var(--aside-desktop-container-width));
+    height: 100%;
   }
 }
 
@@ -245,7 +251,6 @@ main.container {
   margin: auto;
   padding: 1rem;
   width: 100%;
-
   display: block;
 
   transition: all ease-in-out 300ms;
@@ -264,7 +269,6 @@ main.container {
 
 .form > div:last-of-type {
   width: 100%;
-
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
